Converted formatting to conform with CluterWorld Conference guidelines. Restructured cover page to use new set of macros.

--- a/trunk/doc/pubdesign/ChangeLog
+++ b/trunk/doc/pubdesign/ChangeLog
@@ -25,3 +25,8 @@ Mon Jun 10 16:18:05 PDT 2002 grondo
 	nodes, jobs, and job steps.
 
 	Other minor cleanup.
+
+Tue Apr  1 16:50:12 PST 2003 jette
+	Converted formatting to conform with CluterWorld Conference guidelines.
+	Restructured cover page to use new set of macros.
+
